<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="click_submit"
            type="com.mohamedtaha.imagine.gadsleaderboard.ClickSubmit" />
    </data>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        tools:context=".ui.fragments.SubmitFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            style="@style/style_toolbar" />

        <ImageView
            android:id="@+id/image_view_activity_submit"
            android:layout_width="@dimen/sixty_four_dimen"
            android:layout_marginStart="@dimen/fourty_five_dimen"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:layout_height="@dimen/defult_dimen"
            android:src="@drawable/small_logo" />

        <TextView
            android:layout_toEndOf="@+id/image_view_activity_submit"
            android:id="@+id/text_view_google_africa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:layout_marginStart="@dimen/defult_dimen"
            android:gravity="center"
            android:text="@string/google_africa"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_font_titleXL"
             />
        <TextView
            android:layout_toEndOf="@+id/image_view_activity_submit"
            android:layout_below="@+id/text_view_google_africa"
            android:id="@+id/text_view_developer_scholarship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defult_dimen"
            android:gravity="center"
            android:text="@string/developer_scholarship"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_font_titleXL"
            />
        <TextView
            android:layout_below="@+id/tool_bar"
            android:id="@+id/text_submit_SubmitFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defult_dimen"
            android:layout_marginRight="@dimen/defult_dimen"
            android:gravity="center"
            android:text="@string/project_submit"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_font_titleXXL"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:layout_below="@+id/text_submit_SubmitFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_two"
            android:background="@drawable/background_line"/>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_submit_SubmitFragment"
            android:layout_marginTop="@dimen/sixty_four_dimen"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_name_SubmitFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:background="@drawable/background_editt_text"
                android:paddingStart="@dimen/appbar_padding_top"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/second_name_SubmitFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:paddingStart="@dimen/appbar_padding_top"
                android:background="@drawable/background_editt_text"
                android:hint="@string/second_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/email_SubmitFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/sixty_four_dimen"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/appbar_padding_top"
            android:background="@drawable/background_editt_text"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/link_project_SubmitFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_SubmitFragment"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/sixty_four_dimen"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/background_editt_text"
            android:paddingStart="@dimen/appbar_padding_top"
            android:hint="@string/link_project" />
        <ProgressBar
            android:id="@+id/Progress_bar_SubmitFragment"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/link_project_SubmitFragment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/sixty_four_dimen"
            android:background="@drawable/shape_button_submit_project"
            android:onClick="@{() ->click_submit.submit()}"
            android:paddingStart="@dimen/defult_dimen"
            android:paddingEnd="@dimen/defult_dimen"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Widget.Button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_font_titleXL" />
    </RelativeLayout>
</layout>